# cr8tor-webui

./: .gitignore  Dockerfile  README.md
.github/workflows/: docker-publish.yml
web/: README.md
web/backend/: README.md  main.py  pyproject.toml
web/backend/static/: asset-manifest.json  index.html
web/backend/static/static/css/: main.cf50ad53.css  main.cf50ad53.css.map
web/backend/static/static/js/: main.80cfc1f5.js  main.80cfc1f5.js.map
web/frontend/: .env_template  README.md  package-lock.json  package.json
web/frontend/public/: index.html
web/frontend/src/: App.js  ArrayFieldTemplate.js  defaults.js  users-box.css
